# forgectl

./: .gitignore  CLAUDE.md  Makefile  README.md  forgectl-state.json
.workspace/impl-scaffold/: go.mod  impl-scaffold  main.go
.workspace/implement/: initial_prompt.md  specs.md
.workspace/implementation_planning/: impl-scaffold-state.json  launcher-queue.json
.workspace/specs/: SPEC_FORMAT.md  SPEC_GENERATION_SKILL.md
docs/: activity-logging.md  configurations.md  default-config.toml  json-file-catalog.md  reverse-engineering.md  review.md  sub-agent-spawn-points.md
docs/diagrams/: 01-specifying-phase.txt  02-planning-phase.txt  04-cli-commands.txt  08-data-flow.txt
docs/schemas/: forge-state.md  plan-json.md  plan-queue.md  spec-queue.md
forgectl/: go.mod
forgectl/cmd/: adddomain.go  advance.go  commands_test.go  eval.go  init.go  root.go  validate.go  validate_test.go
forgectl/evaluators/: evaluators.go  reverse-engineering-reconcile-eval.md
forgectl/specs/: version-command.md
forgectl/state/: advance.go  advance_test.go  config.go  config_test.go  git.go  git_test.go  logging.go  logging_test.go  output.go  output_test.go  root.go  state.go  state_test.go  types.go  validate.go  validate_test.go
reverse_engineer/: pyproject.toml
reverse_engineer/src/reverse_engineer/: constants.py  factory.py  prompts_loader.py  runner.py  schemas.py
reverse_engineer/tests/: test_constants.py  test_factory.py  test_prompts_loader.py  test_runner.py  test_schemas.py
scripts/: install-claude.sh
skills/implementation_planning/: SKILL.md
(+46 files in other folders)
